--- a/dash.html
+++ b/dash.html
@@ -671,7 +671,7 @@ db   8D Y8b  d8 88 `88.   .88.   88         88    db   8D
     setInterval(updateTopBar, 1000);
 
     // Run the check when the application starts
-    checkForUpdates();
+    //checkForUpdates();
   </script>
   <!--
 d8888b.  .d88b.  d8888b. db    db
