--- a/dash.html
+++ b/dash.html
@@ -320,8 +320,8 @@ db   8D Y8b  d8 88 `88.   .88.   88         88    db   8D
 
 
 -->
-  <script src="https://captainwasabi.github.io/dash/wheelzoom.js"></script>
-  <script src="https://captainwasabi.github.io/dash/config.js"></script>
+  <script src="wheelzoom.js"></script>
+  <script src="config.js"></script>
   <script>
     var largeShow = 0;
     var aIdx = [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1];
